--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-publish:
-    name: Build and publish masscheck on PyPI
+    name: Build and publish mscheck on PyPI
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 3
