This should work!

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,6 +32,9 @@ jobs:
         shell: bash -l {0}
         run: |
           conda create -c conda-forge -n MScheck rdkit
+      - name: Conda activate MSCheck
+        shell: bash -l {0}
+        run: |
           conda activate MScheck
       - name: Install pip dependencies
         run: |
