--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,6 +17,9 @@ jobs:
         python-version:
           - 3.8
           - 3.7
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -29,15 +32,9 @@ jobs:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
       - name: Conda create MSCheck
-        shell: bash -l {0}
         run: |
           conda create -c conda-forge -n MScheck rdkit
-      - name: Conda activate MSCheck
-        shell: bash -l {0}
-        run: |
           conda activate MScheck
-      - name: Install pip dependencies
-        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Test with unittest
