--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -31,10 +31,8 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-      - name: Conda create MSCheck
+      - name: Pip install MSCheck
         run: |
-          conda create -c conda-forge -n MScheck rdkit
-          conda activate MScheck
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m unittest discover
