--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,8 +27,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Pip install MSCheck
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
+      - name: Conda create MSCheck
         run: |
+          conda create -c conda-forge -n MScheck rdkit
+          conda activate MScheck
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           python -m unittest discover
