Use pyopenms nighly build

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pyopenms==2.6.0
-scipy==1.5.3
-numpy==1.20.1
-matplotlib==3.3.4
-svgutils==0.3.4 
+scipy
+svgutils 
+
+--extra-index-url https://pypi.cs.uni-tuebingen.de/simple/
+pyopenms_nightly
