--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -33,7 +33,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Conda create MSCheck
         run: |
-          conda create -c conda-forge -n MScheck rdkit
+          conda create -c conda-forge -n MScheck
           conda activate MScheck
           pip install -r requirements.txt
           python -m unittest discover
