--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -8,11 +8,7 @@ on:
 jobs:
   build-and-publish:
     name: Build and publish mscheck on PyPI
-    runs-on: ${{ matrix.os }}
-    strategy:
-      os:
-        - ubuntu-latest
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - name: Python setup ${{ matrix.python-version }}
