Fixed build to include pip install pyopenms

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -30,4 +30,5 @@ jobs:
           conda create -c conda-forge -n MScheck python=3.11
           conda activate MScheck
           python setup.py install
+          pip install --index-url https://pypi.cs.uni-tuebingen.de/simple/ pyopenms
           python -m unittest discover
